added imgui console

--- a/PoKeMeMe/imgui.ini
+++ b/PoKeMeMe/imgui.ini
@@ -1,7 +1,6 @@
 [Window][DockSpace]
 Pos=0,0
-
-Size=1920,1080
+Size=1279,719
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,51 +9,44 @@ Size=400,400
 Collapsed=0
 
 [Window][Video card info]
-
-Pos=0,867
-Size=1920,213
+Pos=0,506
+Size=1279,213
 Collapsed=0
 DockId=0x00000006,4
 
 [Window][Cpu]
-
-Pos=0,867
-Size=1920,213
+Pos=0,506
+Size=1279,213
 Collapsed=0
 DockId=0x00000006,3
 
 [Window][OS]
-
-Pos=0,867
-Size=1920,213
+Pos=0,506
+Size=1279,213
 Collapsed=0
 DockId=0x00000006,2
 
 [Window][Bios]
-
-Pos=0,867
-Size=1920,213
+Pos=0,506
+Size=1279,213
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][Memory]
-
-Pos=0,867
-Size=1920,213
+Pos=0,506
+Size=1279,213
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Camera]
-
-Pos=1694,19
-Size=226,846
+Pos=1053,19
+Size=226,485
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Entity]
-
-Pos=0,184
-Size=259,681
+Pos=0,114
+Size=259,390
 Collapsed=0
 DockId=0x00000008,0
 
@@ -66,8 +58,7 @@ DockId=0x00000009,0
 
 [Window][Frames]
 Pos=0,19
-
-Size=259,163
+Size=259,93
 Collapsed=0
 DockId=0x00000007,0
 
@@ -79,19 +70,35 @@ DockId=0x0000000B,0
 
 [Window][Framebuffer1]
 Pos=261,19
-Size=634,846
+Size=32,485
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Framebuffer2]
-Pos=897,19
-Size=795,846
+Pos=295,19
+Size=756,485
 Collapsed=0
 DockId=0x0000000C,0
 
-[Docking][Data]
+[Window][Console]
+ViewportPos=415,672
+ViewportId=0xF9BEF62A
+Size=685,350
+Collapsed=0
 
-DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1920,1061 Split=Y Selected=0x0545BD69
+[Window][Dear ImGui Demo]
+ViewportPos=759,84
+ViewportId=0xE927CF2F
+Size=550,680
+Collapsed=0
+
+[Window][Example: Console]
+Pos=40,37
+Size=520,600
+Collapsed=0
+
+[Docking][Data]
+DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=319,198 Size=1279,700 Split=Y Selected=0x0545BD69
   DockNode          ID=0x00000005 Parent=0x09EF459F SizeRef=1080,486 Split=X
     DockNode        ID=0x00000003 Parent=0x00000005 SizeRef=852,701 Split=X
       DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=259,701 Split=Y Selected=0x1692A570
