--- a/PoKeMeMe/imgui.ini
+++ b/PoKeMeMe/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace]
 Pos=0,0
-Size=1279,719
+Size=1599,1066
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,44 +9,44 @@ Size=400,400
 Collapsed=0
 
 [Window][Video card info]
-Pos=0,506
-Size=1279,213
+Pos=0,745
+Size=1599,321
 Collapsed=0
 DockId=0x00000006,4
 
 [Window][Cpu]
-Pos=0,506
-Size=1279,213
+Pos=0,745
+Size=1599,321
 Collapsed=0
 DockId=0x00000006,3
 
 [Window][OS]
-Pos=0,506
-Size=1279,213
+Pos=0,745
+Size=1599,321
 Collapsed=0
 DockId=0x00000006,2
 
 [Window][Bios]
-Pos=0,506
-Size=1279,213
+Pos=0,745
+Size=1599,321
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][Memory]
-Pos=0,506
-Size=1279,213
+Pos=0,745
+Size=1599,321
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Camera]
-Pos=1053,19
-Size=226,485
+Pos=1373,19
+Size=226,724
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Entity]
-Pos=0,114
-Size=259,390
+Pos=0,181
+Size=259,562
 Collapsed=0
 DockId=0x00000008,0
 
@@ -58,7 +58,7 @@ DockId=0x00000009,0
 
 [Window][Frames]
 Pos=0,19
-Size=259,93
+Size=259,160
 Collapsed=0
 DockId=0x00000007,0
 
@@ -70,21 +70,21 @@ DockId=0x0000000B,0
 
 [Window][Framebuffer1]
 Pos=261,19
-Size=32,485
+Size=313,724
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Framebuffer2]
-Pos=295,19
-Size=756,485
+Pos=576,19
+Size=795,724
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Console]
-ViewportPos=415,672
-ViewportId=0xF9BEF62A
-Size=685,350
+Pos=0,745
+Size=1599,321
 Collapsed=0
+DockId=0x00000006,5
 
 [Window][Dear ImGui Demo]
 ViewportPos=759,84
@@ -98,17 +98,17 @@ Size=520,600
 Collapsed=0
 
 [Docking][Data]
-DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=319,198 Size=1279,700 Split=Y Selected=0x0545BD69
-  DockNode          ID=0x00000005 Parent=0x09EF459F SizeRef=1080,486 Split=X
+DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=399,285 Size=1599,1047 Split=Y Selected=0x0545BD69
+  DockNode          ID=0x00000005 Parent=0x09EF459F SizeRef=1080,724 Split=X
     DockNode        ID=0x00000003 Parent=0x00000005 SizeRef=852,701 Split=X
       DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=259,701 Split=Y Selected=0x1692A570
-        DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=211,163 Selected=0x1692A570
-        DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=211,681 Selected=0xF57F7DD5
+        DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=211,160 Selected=0x1692A570
+        DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=211,562 Selected=0xF57F7DD5
       DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=1431,701 Split=X Selected=0x0545BD69
         DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=701,486 Selected=0xD06A1EA9
         DockNode    ID=0x0000000A Parent=0x00000002 SizeRef=728,486 Split=X Selected=0x5DF0C6DC
           DockNode  ID=0x0000000B Parent=0x0000000A SizeRef=634,485 CentralNode=1 Selected=0x5DF0C6DC
           DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=795,485 Selected=0x1A50BC0C
     DockNode        ID=0x00000004 Parent=0x00000005 SizeRef=226,701 Selected=0x0545BD69
-  DockNode          ID=0x00000006 Parent=0x09EF459F SizeRef=1080,213 Selected=0xB2805FDB
+  DockNode          ID=0x00000006 Parent=0x09EF459F SizeRef=1080,321 Selected=0x49278EEE
 
