Fixed console and made changes to support ray cast hit check

--- a/PoKeMeMe/imgui.ini
+++ b/PoKeMeMe/imgui.ini
@@ -9,44 +9,44 @@ Size=400,400
 Collapsed=0
 
 [Window][Video card info]
-Pos=0,1279
-Size=2400,321
+Pos=0,1402
+Size=2400,198
 Collapsed=0
 DockId=0x00000006,4
 
 [Window][Cpu]
-Pos=0,1279
-Size=2400,321
+Pos=0,1402
+Size=2400,198
 Collapsed=0
 DockId=0x00000006,3
 
 [Window][OS]
-Pos=0,1279
-Size=2400,321
+Pos=0,1402
+Size=2400,198
 Collapsed=0
 DockId=0x00000006,2
 
 [Window][Bios]
-Pos=0,1279
-Size=2400,321
+Pos=0,1402
+Size=2400,198
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][Memory]
-Pos=0,1279
-Size=2400,321
+Pos=0,1402
+Size=2400,198
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Camera]
 Pos=2174,19
-Size=226,1258
+Size=226,1381
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Entity]
-Pos=0,299
-Size=259,978
+Pos=0,281
+Size=259,1119
 Collapsed=0
 DockId=0x00000008,0
 
@@ -58,7 +58,7 @@ DockId=0x00000009,0
 
 [Window][Frames]
 Pos=0,19
-Size=259,278
+Size=259,260
 Collapsed=0
 DockId=0x00000007,0
 
@@ -66,23 +66,23 @@ DockId=0x00000007,0
 Pos=1697,19
 Size=475,1366
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000000A,0
 
 [Window][Framebuffer1]
 Pos=261,19
-Size=1174,1258
+Size=1911,1381
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000000A,0
 
 [Window][Framebuffer2]
-Pos=1437,19
-Size=735,1258
+Pos=261,19
+Size=1911,1381
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x0000000A,1
 
 [Window][Console]
-Pos=0,1279
-Size=2400,321
+Pos=0,1402
+Size=2400,198
 Collapsed=0
 DockId=0x00000006,5
 
@@ -98,17 +98,15 @@ Size=520,600
 Collapsed=0
 
 [Docking][Data]
-DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=2400,1581 Split=Y Selected=0x0545BD69
-  DockNode          ID=0x00000005 Parent=0x09EF459F SizeRef=1080,724 Split=X
-    DockNode        ID=0x00000003 Parent=0x00000005 SizeRef=852,701 Split=X
-      DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=259,701 Split=Y Selected=0x1692A570
-        DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=211,160 Selected=0x1692A570
-        DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=211,562 Selected=0xF57F7DD5
-      DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=1431,701 Split=X Selected=0x0545BD69
-        DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=701,486 Selected=0xD06A1EA9
-        DockNode    ID=0x0000000A Parent=0x00000002 SizeRef=728,486 Split=X Selected=0x5DF0C6DC
-          DockNode  ID=0x0000000B Parent=0x0000000A SizeRef=373,485 CentralNode=1 Selected=0x5DF0C6DC
-          DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=735,485 Selected=0x1A50BC0C
-    DockNode        ID=0x00000004 Parent=0x00000005 SizeRef=226,701 Selected=0x0545BD69
-  DockNode          ID=0x00000006 Parent=0x09EF459F SizeRef=1080,321 Selected=0xB2805FDB
+DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=2400,1581 Split=Y Selected=0x0545BD69
+  DockNode        ID=0x00000005 Parent=0x09EF459F SizeRef=1080,1381 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000005 SizeRef=852,701 Split=X
+      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=259,701 Split=Y Selected=0x1692A570
+        DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=211,260 Selected=0x1692A570
+        DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=211,1119 Selected=0xF57F7DD5
+      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1431,701 Split=X Selected=0x0545BD69
+        DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=701,486 Selected=0xD06A1EA9
+        DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=728,486 CentralNode=1 Selected=0x5DF0C6DC
+    DockNode      ID=0x00000004 Parent=0x00000005 SizeRef=226,701 Selected=0x0545BD69
+  DockNode        ID=0x00000006 Parent=0x09EF459F SizeRef=1080,198 Selected=0x49278EEE
 
