Added support for wire frame rendering

--- a/PoKeMeMe/imgui.ini
+++ b/PoKeMeMe/imgui.ini
@@ -66,19 +66,19 @@ DockId=0x00000007,0
 Pos=1697,19
 Size=475,1366
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x0000000B,0
 
 [Window][Framebuffer1]
 Pos=305,19
-Size=1294,847
+Size=136,847
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x0000000B,0
 
 [Window][Framebuffer2]
-Pos=305,19
-Size=1294,847
+Pos=443,19
+Size=1156,847
 Collapsed=0
-DockId=0x0000000A,1
+DockId=0x0000000C,0
 
 [Window][Console]
 Pos=0,868
@@ -98,15 +98,17 @@ Size=520,600
 Collapsed=0
 
 [Docking][Data]
-DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=399,285 Size=1599,1047 Split=Y Selected=0x0545BD69
-  DockNode        ID=0x00000005 Parent=0x09EF459F SizeRef=1080,1381 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000005 SizeRef=852,701 Split=X
-      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=303,701 Split=Y Selected=0x1692A570
-        DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=211,260 Selected=0x1692A570
-        DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=211,1119 Selected=0xF57F7DD5
-      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1294,701 Split=X Selected=0x0545BD69
-        DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=701,486 Selected=0xD06A1EA9
-        DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=728,486 CentralNode=1 Selected=0x5DF0C6DC
-    DockNode      ID=0x00000004 Parent=0x00000005 SizeRef=226,701 Selected=0x0545BD69
-  DockNode        ID=0x00000006 Parent=0x09EF459F SizeRef=1080,198 Selected=0x49278EEE
+DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=399,285 Size=1599,1047 Split=Y Selected=0x0545BD69
+  DockNode          ID=0x00000005 Parent=0x09EF459F SizeRef=1080,1381 Split=X
+    DockNode        ID=0x00000003 Parent=0x00000005 SizeRef=852,701 Split=X
+      DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=303,701 Split=Y Selected=0x1692A570
+        DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=211,260 Selected=0x1692A570
+        DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=211,1119 Selected=0xF57F7DD5
+      DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=1294,701 Split=X Selected=0x0545BD69
+        DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=701,486 Selected=0xD06A1EA9
+        DockNode    ID=0x0000000A Parent=0x00000002 SizeRef=728,486 Split=X Selected=0x5DF0C6DC
+          DockNode  ID=0x0000000B Parent=0x0000000A SizeRef=136,1381 CentralNode=1 Selected=0x5DF0C6DC
+          DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=1156,1381 Selected=0x1A50BC0C
+    DockNode        ID=0x00000004 Parent=0x00000005 SizeRef=226,701 Selected=0x0545BD69
+  DockNode          ID=0x00000006 Parent=0x09EF459F SizeRef=1080,198 Selected=0xB2805FDB
 
